# RustSimpleWebScraper

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: main.rs
