[package]
name = "web-scraper"
version = "0.1.0"
edition = "2021"
authors = ["Jacques Murray <jacquesmmurray@gmail.com>"]
description = "A simple web scraper built with Rust"
license = "MIT"
repository = "https://github.com/Jacques-Murray/RustSimpleWebScraper"

[dependencies]
reqwest = "0.11"
scraper = "0.13"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
