[package]
name = "web-scraper"
version = "0.1.0"
edition = "2021"
authors = ["Jacques Murray <jacquesmmurray@gmail.com>"]
description = "A simple web scraper built with Rust"
license = "MIT"
repository = "https://github.com/Jacques-Murray/RustSimpleWebScraper"

[dependencies]
thiserror = "2.0.16"
anyhow = "1.0.99"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["full"] }
scraper = "0.24.0"
lazy_static = "1.5.0"
